testsuite/poke.pkl/cast-diag-1.pk
/* { dg-do compile } */

fun bar = void: {}
var v = bar as int<32>; /* { dg-error "" } */
